force-app/main/default/objects/Blue_Sky_Cellar__c/Blue_Sky_Cellar__c.object-meta.xml
<CustomObject>
    <description>Marketing Object</description>
    <label>Blue Sky Cellar</label>
    <nameField>
        <label>Blue Sky Cellar Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Blue Sky Cellar</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>