force-app/main/default/objects/Blue_Sky_Cellar__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Blue Sky Cellar</relationshipLabel>
    <relationshipName>Blue_Sky_Cellar</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>