force-app/main/default/objects/Blue_Sky_Cellar__c/fields/Next_Step__c.field-meta.xml
<CustomField>
    <fullName>Next_Step__c</fullName>
    <description>Next Step Identified in Advancing this Project</description>
    <label>Next Step</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>