force-app/main/default/objects/Blue_Sky_Cellar__c/fields/Timeframe__c.field-meta.xml
<CustomField>
    <fullName>Timeframe__c</fullName>
    <label>Timeframe</label>
    <type>Date</type>
</CustomField>