force-app/main/default/objects/Blue_Sky_Cellar__c/listViews/My_Projects.listView-meta.xml
<ListView>
    <fullName>My_Projects</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Next_Step__c</columns>
    <columns>Timeframe__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Projects</label>
</ListView>