force-app/main/default/objects/Blue_Sky_Cellar__c/listViews/Open_Projects.listView-meta.xml
<ListView>
    <fullName>Open_Projects</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Next_Step__c</columns>
    <columns>Timeframe__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>In Progress</value>
    </filters>
    <label>Projects in Progress</label>
</ListView>